--- a/core/scheduler/impl/build.gradle
+++ b/core/scheduler/impl/build.gradle
@@ -7,17 +7,11 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
             project(':base'),
-            project(':util')
+            project(':core:scheduler:api')
     )
     implementation(
-            Dependencies.AndroidX.appCompat,
-            Dependencies.AndroidX.fragmentKtx,
-            Dependencies.AndroidX.liveData,
             Dependencies.Lib.ktStdLib,
             Dependencies.Rx.rx,
-            Dependencies.Rx.rxAndroid,
-            Dependencies.Rx.rxBinding,
-            Dependencies.Rx.autoDispose,
-            Dependencies.Rx.autoDisposeAndroidAC
+            Dependencies.Rx.rxAndroid
     )
 }
