--- a/data/build.gradle
+++ b/data/build.gradle
@@ -11,7 +11,7 @@ dependencies {
             project(':util')
     )
     implementation(
-            Dependencies.Lib.ktStdLibJdk7,
+            Dependencies.Lib.ktStdLib,
             Dependencies.Network.okHttpLog,
             Dependencies.Network.retrofit,
             Dependencies.Network.retrofitMoshi,
