--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,13 @@
 include ':androidUtil'
 include ':app'
 include ':base'
+include ':core:scheduler:impl'
+include ':core:scheduler:api'
+include ':core:ui'
 include ':data'
+include ':design'
 include ':domain'
+include ':navigation'
 include ':util'
 include ':lint-rules'
 rootProject.name = "DiRecall"
