Add :AnalyticsCoreLib module and provide it's bindings to feature modules without using of FeatureContainer

--- a/Feature/GithubRepo/GithubRepoImpl/build.gradle
+++ b/Feature/GithubRepo/GithubRepoImpl/build.gradle
@@ -13,6 +13,7 @@ dependencies {
             project(':design'),
             project(':navigation'),
             project(':util'),
+            project(':AnalyticsCoreLibApi'),
             project(':Core:DiCoreLib'),
             project(':Core:NetCoreLib:NetCoreLibApi'),
             project(':Core:SchedulerCoreLib:SchedulerCoreLibApi'),
