Use Anvil to provide bindings less verbosely

--- a/feature/github_repo/impl/build.gradle
+++ b/feature/github_repo/impl/build.gradle
@@ -2,6 +2,7 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
+apply plugin: Dependencies.Plugin.anvil
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
