--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         )
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.ktStdLib}"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:${Versions.ktlintGradle}"
+        classpath "com.squareup.anvil:gradle-plugin:${Versions.anvil}"
     }
 }
 
