--- a/core/network/wiring/build.gradle
+++ b/core/network/wiring/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
 apply plugin: Dependencies.Plugin.kotlinAnnotation
+apply plugin: Dependencies.Plugin.anvil
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
