--- a/feature/github_user_details/public/build.gradle
+++ b/feature/github_user_details/public/build.gradle
@@ -2,6 +2,7 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.anvil
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
