--- a/feature/github_repo/build.gradle
+++ b/feature/github_repo/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -23,6 +24,7 @@ dependencies {
             Dependencies.AndroidX.navigationUi,
             Dependencies.Di.dagger,
             Dependencies.Di.daggerAndroidSupport,
+            Dependencies.Di.daggerAssistedInject,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
             Dependencies.Network.retrofit,
@@ -36,5 +38,9 @@ dependencies {
             Dependencies.Rx.rxBindingCore,
             Dependencies.View.constraintLayout,
             Dependencies.View.recyclerView
+    )
+    kapt(
+            Dependencies.Di.daggerAssistedInjectCompiler,
+            Dependencies.Di.daggerCompiler
     )
 }
