--- a/feature/github_user_list/build.gradle
+++ b/feature/github_user_list/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
