--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,9 @@ include ':Feature:GithubUserList:GithubUserListApi'
 include ':Feature:GithubUserList:GithubUserListImpl'
 include ':Feature:GithubUserDetails:GithubUserDetailsApi'
 include ':Feature:GithubUserDetails:GithubUserDetailsImpl'
+include ':Feature:GithubUserFollowers:GithubUserFollowersApi'
+include ':Feature:GithubUserFollowers:GithubUserFollowersDfm'
+include ':Feature:GithubUserFollowers:GithubUserFollowersImpl'
 include ':Feature:GithubUserGists:GithubUserGistsApi'
 include ':Feature:GithubUserGists:GithubUserGistsImpl'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsApi'
