Refactor user details feature to library + DFM in order to fix the scope leaking of dynamic args for VM

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
     dynamicFeatures = [
             ':Feature:GithubUserGists:GithubUserGistsImpl',
             ':Feature:GithubUserOrganizations:GithubUserOrganizationsImpl',
+            ':Feature:GithubUserDetails:GithubUserDetailsDfm',
             ':Feature:GithubUserFollowers:GithubUserFollowersDfm'
     ]
 }
