--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include ':Core:UiCoreLib'
 include ':Feature:GithubUserList:GithubUserListApi'
 include ':Feature:GithubUserList:GithubUserListImpl'
 include ':Feature:GithubUserDetails:GithubUserDetailsApi'
+include ':Feature:GithubUserDetails:GithubUserDetailsDfm'
 include ':Feature:GithubUserDetails:GithubUserDetailsImpl'
 include ':Feature:GithubUserFollowers:GithubUserFollowersApi'
 include ':Feature:GithubUserFollowers:GithubUserFollowersDfm'
