--- a/Feature/GithubUserDetails/GithubUserDetailsImpl/build.gradle
+++ b/Feature/GithubUserDetails/GithubUserDetailsImpl/build.gradle
@@ -2,34 +2,20 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
 apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
-            project(':androidUtil'),
             project(':base'),
-            project(':design'),
-            project(':navigation'),
             project(':util'),
-            project(':AnalyticsCoreLibApi'),
             project(':Core:DiCoreLib'),
             project(':Core:NetCoreLib:NetCoreLibApi'),
             project(':Core:SchedulerCoreLib:SchedulerCoreLibApi'),
-            project(':Core:UiCoreLib'),
             project(':Feature:GithubUserDetails:GithubUserDetailsApi')
     )
     implementation(
-            Dependencies.AndroidX.appCompat,
-            Dependencies.AndroidX.coreKtx,
-            Dependencies.AndroidX.fragmentKtx,
-            Dependencies.AndroidX.liveData,
-            Dependencies.AndroidX.navigation,
-            Dependencies.AndroidX.navigationUi,
             Dependencies.Di.dagger,
-            Dependencies.Di.daggerAndroidSupport,
-            Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
             Dependencies.Network.retrofit,
@@ -37,15 +23,9 @@ dependencies {
             Dependencies.Parser.moshiAdapters,
             Dependencies.Parser.moshiKotlin,
             Dependencies.Rx.rx,
-            Dependencies.Rx.rxAndroid,
-            Dependencies.Rx.rxBinding,
-            Dependencies.Rx.autoDispose,
-            Dependencies.Rx.autoDisposeAndroidAC,
-            Dependencies.View.constraintLayout,
-            Dependencies.View.recyclerView
+            Dependencies.Rx.rxAndroid
     )
     kapt(
-            Dependencies.Di.daggerAndroidProcessor,
             Dependencies.Di.daggerCompiler,
             Dependencies.Parser.moshiKotlinCodegen
     )
