--- a/settings.gradle
+++ b/settings.gradle
@@ -28,6 +28,9 @@ include ':Feature:GithubUserGists:GithubUserGistsApi'
 include ':Feature:GithubUserGists:GithubUserGistsImpl'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsApi'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsImpl'
+include ':Feature:GithubUserProfile:GithubUserProfileApi'
+include ':Feature:GithubUserProfile:GithubUserProfileDfm'
+include ':Feature:GithubUserProfile:GithubUserProfileImpl'
 include ':Feature:GithubRepo:GithubRepoApi'
 include ':Feature:GithubRepo:GithubRepoImpl'
 rootProject.name = "DiRecall"
