Refactor :GithubUserGists dfm module to library + dfm in order to contribute it's library bindings to FeatureContainer to be accessible

--- a/Feature/GithubUserGists/GithubUserGistsApi/build.gradle
+++ b/Feature/GithubUserGists/GithubUserGistsApi/build.gradle
@@ -6,6 +6,7 @@ apply plugin: Dependencies.Plugin.kotlin
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(
+            Dependencies.Di.dagger,
             Dependencies.Lib.ktStdLib,
             Dependencies.Rx.rx
     )
