--- a/Feature/GithubUserGists/GithubUserGistsImpl/build.gradle
+++ b/Feature/GithubUserGists/GithubUserGistsImpl/build.gradle
@@ -1,34 +1,20 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: Dependencies.Plugin.androidDynamicFeature
-apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.javaLib
+apply plugin: Dependencies.Plugin.kotlin
 apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
-            project(':androidUtil'),
-            project(':app'), // <- base module for Dynamic Feature
             project(':base'),
-            project(':design'),
-            project(':navigation'),
             project(':util'),
-            project(':AnalyticsCoreLibApi'),
-            project(':Core:AppCoreLib:AppCoreLibApi'),
             project(':Core:DiCoreLib'),
             project(':Core:NetCoreLib:NetCoreLibApi'),
             project(':Core:SchedulerCoreLib:SchedulerCoreLibApi'),
-            project(':Core:UiCoreLib'),
             project(':Feature:GithubUserGists:GithubUserGistsApi')
     )
     implementation(
-            Dependencies.AndroidX.appCompat,
-            Dependencies.AndroidX.coreKtx,
-            Dependencies.AndroidX.fragmentKtx,
-            Dependencies.AndroidX.liveData,
-            Dependencies.AndroidX.navigation,
-            Dependencies.AndroidX.navigationUi,
             Dependencies.Di.dagger,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
@@ -37,15 +23,14 @@ dependencies {
             Dependencies.Parser.moshiAdapters,
             Dependencies.Parser.moshiKotlin,
             Dependencies.Rx.rx,
-            Dependencies.Rx.rxAndroid,
-            Dependencies.Rx.rxBinding,
-            Dependencies.Rx.autoDispose,
-            Dependencies.Rx.autoDisposeAndroidAC,
-            Dependencies.View.constraintLayout,
-            Dependencies.View.recyclerView
+            Dependencies.Rx.rxAndroid
     )
     kapt(
             Dependencies.Di.daggerCompiler,
             Dependencies.Parser.moshiKotlinCodegen
     )
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
