--- a/Feature/GithubUserProfile/GithubUserProfileImpl/build.gradle
+++ b/Feature/GithubUserProfile/GithubUserProfileImpl/build.gradle
@@ -1,7 +1,7 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: Dependencies.Plugin.javaLib
-apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.androidLib
+apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
@@ -34,8 +34,4 @@ dependencies {
             Dependencies.Di.daggerCompiler,
             Dependencies.Parser.moshiKotlinCodegen
     )
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
