--- a/Feature/GithubUserOrganizations/GithubUserOrganizationsImpl/src/main/AndroidManifest.xml
+++ b/Feature/GithubUserOrganizations/GithubUserOrganizationsImpl/src/main/AndroidManifest.xml
@@ -1,13 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.orcchg.direcall.feature.github_user_organizations.impl">
-
-    <dist:module
-        dist:instant="false"
-        dist:title="@string/title_github_user_organizations">
-        <dist:delivery>
-            <dist:install-time />
-        </dist:delivery>
-        <dist:fusing dist:include="true" />
-    </dist:module>
-</manifest>
+<manifest package="com.orcchg.direcall.feature.github_user_organizations.impl" />
