--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include ':Feature:GithubUserOrganizations:GithubUserOrganizationsDfm'
 include ':Feature:GithubUserGists:GithubUserGistsDfm'
 apply from: 'script/module_file_struct.gradle'
 
