--- a/Feature/GithubUserProfile/GithubUserProfileDfm/build.gradle
+++ b/Feature/GithubUserProfile/GithubUserProfileDfm/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             project(':navigation'),
             project(':util'),
             project(':AnalyticsCoreLibApi'),
+            project(':Core:AppCoreLib:AppCoreLibApi'),
             project(':Core:DiCoreLib'),
             project(':Core:UiCoreLib'),
             project(':Feature:GithubRepo:GithubRepoApi'),
