Prepare :Ui module for :demo-app, because DFM can't be tested with standalone application due to it's transitive dependency on :app module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,4 @@
-include ':Feature:GithubUserOrganizations:GithubUserOrganizationsDfm'
-include ':Feature:GithubUserGists:GithubUserGistsDfm'
+include ':Feature:GithubUserProfile:GithubUserProfileDfm'
 apply from: 'script/module_file_struct.gradle'
 
 include ':androidUtil'
@@ -27,11 +26,14 @@ include ':Feature:GithubUserFollowers:GithubUserFollowersApi'
 include ':Feature:GithubUserFollowers:GithubUserFollowersDfm'
 include ':Feature:GithubUserFollowers:GithubUserFollowersImpl'
 include ':Feature:GithubUserGists:GithubUserGistsApi'
+include ':Feature:GithubUserGists:GithubUserGistsDfm'
 include ':Feature:GithubUserGists:GithubUserGistsImpl'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsApi'
+include ':Feature:GithubUserOrganizations:GithubUserOrganizationsDfm'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsImpl'
+include ':Feature:GithubUserProfile:Demo'
 include ':Feature:GithubUserProfile:GithubUserProfileApi'
-include ':Feature:GithubUserProfile:GithubUserProfileDfm'
+include ':Feature:GithubUserProfile:GithubUserProfileUi'
 include ':Feature:GithubUserProfile:GithubUserProfileImpl'
 include ':Feature:GithubRepo:GithubRepoApi'
 include ':Feature:GithubRepo:GithubRepoImpl'
