--- a/Feature/GithubUserProfile/Demo/build.gradle
+++ b/Feature/GithubUserProfile/Demo/build.gradle
@@ -1,17 +1,23 @@
 import com.orcchg.direcall.build.Dependencies
 
-apply plugin: Dependencies.Plugin.androidDynamicFeature
+apply plugin: Dependencies.Plugin.androidApp
 apply plugin: Dependencies.Plugin.kotlinAndroid
+
+android {
+    defaultConfig {
+        applicationId = 'com.orcchg.direcall.feature.github_user_profile.demo'
+    }
+}
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(
-            project(':app'), // <- base module for Dynamic Feature
-            project(':Feature:GithubUserProfile:GithubUserProfileApi'),
             project(':Feature:GithubUserProfile:GithubUserProfileUi')
     )
     implementation(
             Dependencies.AndroidX.appCompat,
-            Dependencies.Lib.ktStdLib
+            Dependencies.AndroidX.material,
+            Dependencies.Lib.ktStdLib,
+            Dependencies.Lib.timber
     )
 }
