--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ org.gradle.jvmargs=-Xmx2048m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.cache=false
 org.gradle.parallel=true
+kapt.incremental.apt=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
