--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-include ':Feature:GithubUserProfile:GithubUserProfileDfm'
 apply from: 'script/module_file_struct.gradle'
 
 include ':androidUtil'
@@ -21,20 +20,26 @@ include ':Feature:GithubUserList:GithubUserListApi'
 include ':Feature:GithubUserList:GithubUserListImpl'
 include ':Feature:GithubUserDetails:GithubUserDetailsApi'
 include ':Feature:GithubUserDetails:GithubUserDetailsDfm'
+include ':Feature:GithubUserDetails:GithubUserDetailsFake'
 include ':Feature:GithubUserDetails:GithubUserDetailsImpl'
 include ':Feature:GithubUserFollowers:GithubUserFollowersApi'
 include ':Feature:GithubUserFollowers:GithubUserFollowersDfm'
+include ':Feature:GithubUserFollowers:GithubUserFollowersFake'
 include ':Feature:GithubUserFollowers:GithubUserFollowersImpl'
 include ':Feature:GithubUserGists:GithubUserGistsApi'
 include ':Feature:GithubUserGists:GithubUserGistsDfm'
+include ':Feature:GithubUserGists:GithubUserGistsFake'
 include ':Feature:GithubUserGists:GithubUserGistsImpl'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsApi'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsDfm'
+include ':Feature:GithubUserOrganizations:GithubUserOrganizationsFake'
 include ':Feature:GithubUserOrganizations:GithubUserOrganizationsImpl'
 include ':Feature:GithubUserProfile:Demo'
 include ':Feature:GithubUserProfile:GithubUserProfileApi'
+include ':Feature:GithubUserProfile:GithubUserProfileDfm'
 include ':Feature:GithubUserProfile:GithubUserProfileUi'
 include ':Feature:GithubUserProfile:GithubUserProfileImpl'
 include ':Feature:GithubRepo:GithubRepoApi'
+include ':Feature:GithubRepo:GithubRepoFake'
 include ':Feature:GithubRepo:GithubRepoImpl'
 rootProject.name = "DiRecall"
