--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ dependencies {
     implementation(
             project(':androidUtil'),
             project(':base'),
-            project(':domain')
+            project(':domain'),
+            project(':data')
     )
     implementation(
             Dependencies.AndroidX.appCompat,
