--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,15 @@ dependencies {
             Dependencies.AndroidX.navigationUi,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
+            Dependencies.Lib.ktStdLibJdk7,
             Dependencies.Lib.timber,
+            Dependencies.Network.okHttpLog,
+            Dependencies.Network.retrofit,
+            Dependencies.Network.retrofitMoshi,
+            Dependencies.Network.retrofitRx,
+            Dependencies.Parser.moshi,
+            Dependencies.Parser.moshiAdapters,
+            Dependencies.Parser.moshiKotlin,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC,
             Dependencies.Rx.rx,
@@ -35,15 +43,7 @@ dependencies {
             Dependencies.Rx.rxBinding,
             Dependencies.Rx.rxBindingCore,
             Dependencies.View.constraintLayout,
-            Dependencies.View.recyclerView,
-            Dependencies.Lib.ktStdLibJdk7,
-            Dependencies.Network.okHttpLog,
-            Dependencies.Network.retrofit,
-            Dependencies.Network.retrofitMoshi,
-            Dependencies.Network.retrofitRx,
-            Dependencies.Parser.moshi,
-            Dependencies.Parser.moshiAdapters,
-            Dependencies.Parser.moshiKotlin
+            Dependencies.View.recyclerView
     )
     testImplementation Dependencies.Test.junit
     androidTestImplementation(
