--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -3,6 +3,7 @@ import com.orcchg.direcall.build.Dependencies
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
 apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -14,10 +15,16 @@ dependencies {
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
+            Dependencies.Dagger.dagger,
+            Dependencies.Dagger.daggerAndroid,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid,
             Dependencies.Rx.rxBinding,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC
+    )
+    kapt(
+            Dependencies.Dagger.daggerAndroidProcessor,
+            Dependencies.Dagger.daggerCompiler
     )
 }
