--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,13 +2,20 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(":base")
     implementation(
+            Dependencies.Dagger.dagger,
+            Dependencies.Dagger.daggerAndroid,
             Dependencies.Lib.ktStdLibJdk7,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxKt
+    )
+    kapt(
+            Dependencies.Dagger.daggerAndroidProcessor,
+            Dependencies.Dagger.daggerCompiler
     )
 }
