--- a/util/build.gradle
+++ b/util/build.gradle
@@ -2,8 +2,17 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation Dependencies.Lib.ktStdLibJdk7
+    implementation (
+            Dependencies.Dagger.dagger,
+            Dependencies.Dagger.daggerAndroid,
+            Dependencies.Lib.ktStdLibJdk7
+    )
+    kapt(
+            Dependencies.Dagger.daggerAndroidProcessor,
+            Dependencies.Dagger.daggerCompiler
+    )
 }
