ANDROIDSTUDY-T-26: Provide dagger2 dependencies to gradle build scripts

--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -16,15 +16,11 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
             Dependencies.Dagger.dagger,
-            Dependencies.Dagger.daggerAndroid,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid,
             Dependencies.Rx.rxBinding,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC
     )
-    kapt(
-            Dependencies.Dagger.daggerAndroidProcessor,
-            Dependencies.Dagger.daggerCompiler
-    )
+    kapt Dependencies.Dagger.daggerCompiler
 }
