--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidApp
 apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 apply plugin: Dependencies.Plugin.navSafeArgs
 
 android {
@@ -16,6 +16,7 @@ dependencies {
     implementation(
             project(':androidUtil'),
             project(':base'),
+            project(':data'),
             project(':domain')
     )
     implementation(
@@ -24,9 +25,11 @@ dependencies {
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.navigation,
             Dependencies.AndroidX.navigationUi,
+            Dependencies.Di.toothpick,
             Dependencies.Lib.glide,
             Dependencies.Lib.ktStdLib,
             Dependencies.Lib.timber,
+            Dependencies.Network.retrofit,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC,
             Dependencies.Rx.rx,
@@ -35,6 +38,9 @@ dependencies {
             Dependencies.Rx.rxBindingCore,
             Dependencies.View.constraintLayout,
             Dependencies.View.recyclerView
+    )
+    kapt(
+            Dependencies.Di.toothpickCompiler
     )
     testImplementation Dependencies.Test.junit
     androidTestImplementation(
