--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,13 +2,18 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.javaLib
 apply plugin: Dependencies.Plugin.kotlin
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(":base")
     implementation(
-            Dependencies.Lib.ktStdLibJdk7,
+            Dependencies.Di.toothpick,
+            Dependencies.Lib.ktStdLib,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxKt
+    )
+    kapt(
+            Dependencies.Di.toothpickCompiler
     )
 }
