--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
+            Dependencies.Di.kodein,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid,
             Dependencies.Rx.rxBinding,
