--- a/data/build.gradle
+++ b/data/build.gradle
@@ -11,7 +11,8 @@ dependencies {
             project(':util')
     )
     implementation(
-            Dependencies.Lib.ktStdLibJdk7,
+            Dependencies.Di.kodein,
+            Dependencies.Lib.ktStdLib,
             Dependencies.Network.okHttpLog,
             Dependencies.Network.retrofit,
             Dependencies.Network.retrofitMoshi,
@@ -23,4 +24,8 @@ dependencies {
     kapt(
             Dependencies.Parser.moshiKotlinCodegen
     )
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
