--- a/core/scheduler/build.gradle
+++ b/core/scheduler/build.gradle
@@ -11,6 +11,7 @@ dependencies {
             project(':core:scheduler_api')
     )
     implementation(
+            Dependencies.Di.kodein,
             Dependencies.Lib.ktStdLib,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid
