--- a/core/ui_core_lib/build.gradle
+++ b/core/ui_core_lib/build.gradle
@@ -10,6 +10,8 @@ dependencies {
             Dependencies.AndroidX.appCompat,
             Dependencies.AndroidX.fragmentKtx,
             Dependencies.AndroidX.liveData,
+            Dependencies.Di.kodein,
+            Dependencies.Di.kodeinAndroid,
             Dependencies.Rx.rx,
             Dependencies.Rx.autoDispose,
             Dependencies.Rx.autoDisposeAndroidAC
