--- a/core/scheduler/build.gradle
+++ b/core/scheduler/build.gradle
@@ -2,7 +2,7 @@ import com.orcchg.direcall.build.Dependencies
 
 apply plugin: Dependencies.Plugin.androidLib
 apply plugin: Dependencies.Plugin.kotlinAndroid
-apply plugin: Dependencies.Plugin.kotlinAndroidExt
+apply plugin: Dependencies.Plugin.kotlinAnnotation
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -11,8 +11,12 @@ dependencies {
             project(':core:scheduler_api')
     )
     implementation(
+            Dependencies.Di.dagger,
             Dependencies.Lib.ktStdLib,
             Dependencies.Rx.rx,
             Dependencies.Rx.rxAndroid
+    )
+    kapt(
+            Dependencies.Di.daggerCompiler
     )
 }
